Changelog
=========

1.1.2 (unreleased)
------------------

- Nothing changed yet.


1.1.1 (2011-06-27)
------------------

* Notify ObjectInializedEvent at upload.
  Fixes http://plone.org/products/collective.quickupload/issues/7
  [thomasdesvenain, thanks to lars.eisbaer]

* Pass content_type to the ContentTypeRegistry
  Fixes http://plone.org/products/collective.quickupload/issues/13/
  [thomasw]

* Added Brazilian Portuguese translation
  [erico_andrei]

* Quickupload form allows to fill description for each uploaded file
  [regisrouet]


1.1.0 (2011-04-06)
------------------

* Mimetype detection works with blobs (plone 4.0+ files).
  [thomasdesvenain]

* Keep dots in filename during id normalization.
  [thomasdesvenain]

* Plone 4.1 compatibility.
  [vincentfretin]

1.0.3
-----

* let an empty content_type when mimetype_registry return None as mimetype object.
  will result in "application/octet-stream"
  macadames 2010-09-29

* use a specific interface IQuickUploadFactory in place of IFileFactory
  to avoid possible conflicts with another products using the same interface
  http://plone.org/products/collective.quickupload/issues/4
  macadames and mroeder 2010-10-07

* files id consolidation
  macadames and mroeder 2010-10-07

* log some rare exceptions (bad id, no primary field ...)
  resolve http://plone.org/products/collective.quickupload/issues/6
  macadames and mroeder 2010-10-08

* fix error in quick_upload.py when typeupload was defined without mediaupload
  resolve http://plone.org/products/collective.quickupload/issues/5
  macadames and kayeva 2010-10-10

* improve doctests (with last bugfixes on typeupload/mediaupload)
  macadames 2010-10-10

* fix doctests in Plone4
  macadames 2010-10-10

1.0.2
-----

* IE7 css fixes upload button was uggly
  macadames 2010-09-22

* fix content-type header with FireFox xhr upload
  sometimes is missing
  macadames 2010-09-24

* don't use unicode in setFileName